Some complex text doesn't render correctly on macOS

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • jfx21
    • Affects Version/s: 8u231, jfx14
    • Component/s: javafx
    • b13
    • os_x

      To reproduce this, run the attached test program. On macOS 10.13.6 both the Arabic and Hebrew text looks wrong. On macOS 10.15.4 the Hebrew text looks fine, but the Arabic text is still incorrect (although not as bad as on 10.13).

      I'll attach images for macOS 10.13 and 10.15, and I'll attach an image from Windows 10 as a reference image (it looks correct to me on Windows).

        1. ComplexText.java
          5 kB
          Kevin Rushforth
        2. ComplexText-mac-10_13.png
          300 kB
          Kevin Rushforth
        3. ComplexText-mac-10-15.png
          597 kB
          Kevin Rushforth
        4. ComplexText-win-10.png
          55 kB
          Kevin Rushforth
        5. ComplexText-mac-10_13-FX-13.png
          297 kB
          Kevin Rushforth
        6. ComplexText-win-10-two.png
          70 kB
          Kevin Rushforth
        7. ComplexText-mac-10-15-two.png
          371 kB
          Kevin Rushforth

            Assignee:
            Philip Race
            Reporter:
            Kevin Rushforth
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: