8246104: Some complex text doesn't render correctly on macOS

Reviewed-by: angorya, kcr, jvos